--- a/mediacore/public/styles/comments.css
+++ b/mediacore/public/styles/comments.css
@@ -40,7 +40,7 @@
 	background: url('../images/layout/comment-bottom.png') no-repeat;
 }
 .comment-top-divot {
-	height: 27px;
+	height: 26px;
 	background: url('../images/layout/comment-top-divot.png') no-repeat bottom;
 }
 .comment-content {
